missed annotations added

--- a/employeemgmt/src/main/resources/templates/create_employee.html
+++ b/employeemgmt/src/main/resources/templates/create_employee.html
@@ -13,7 +13,7 @@
 		<!-- Brand -->
 		<a class="navbar-brand" href="#">Employee Management System</a>
 
-		<!-- Toggler/collapsibe Button -->
+		<!-- Toggler/collapsible Button -->
 		<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
 			<span class="navbar-toggler-icon"></span>
 		</button>
@@ -57,8 +57,8 @@
 								Submit
 							</button>
 						</div>
+						
 					</form>
-
 				</div>
 			</div>
 		</div>
