--- a/employeemgmt/src/main/resources/templates/edit_employee.html
+++ b/employeemgmt/src/main/resources/templates/edit_employee.html
@@ -33,8 +33,7 @@
 	<br>
 	<div class="container">
 		<div class="row">
-			<div
-				class="col-lg-6 col-md-6 col-sm-6 container justify-content-center card">
+			<div class="col-lg-6 col-md-6 col-sm-6 container justify-content-center card">
 				<h1 class="text-center">Update Employee</h1>
 				<div class="card-body">
 					<form th:action="@{/employees/{id} (id=${employee.id})}"
@@ -50,6 +49,7 @@
 								name="lastName" th:field="*{lastName}" class="form-control"
 								placeholder="Enter Last Name" />
 						</div>
+						
 						<div class="form-group">
 							<label> Employee Email </label> <input type="text" name="email"
 								th:field="*{email}" class="form-control"
@@ -60,7 +60,6 @@
 							<button type="submit" class="btn btn-primary">Submit</button>
 						</div>
 					</form>
-
 				</div>
 			</div>
 		</div>
