--- a/employeemgmt/src/main/resources/templates/edit_employee.html
+++ b/employeemgmt/src/main/resources/templates/edit_employee.html
@@ -6,8 +6,7 @@
 	<title>Employee Management System</title>
 	<link rel="stylesheet"
 		href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
-		integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm"
-		crossorigin="anonymous">
+		integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 </head>
 
 <body>
@@ -16,8 +15,7 @@
 		<a class="navbar-brand" href="#">Employee Management System</a>
 
 		<!-- Toggler/collapsible Button -->
-		<button class="navbar-toggler" type="button" data-toggle="collapse"
-			data-target="#collapsibleNavbar">
+		<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
 			<span class="navbar-toggler-icon"></span>
 		</button>
 
@@ -65,5 +63,4 @@
 		</div>
 	</div>
 </body>
-
 </html>
