--- a/employeemgmt/src/main/resources/templates/employees.html
+++ b/employeemgmt/src/main/resources/templates/employees.html
@@ -6,8 +6,7 @@
 	<title>Employee Management System</title>
 	<link rel="stylesheet"
 		href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
-		integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm"
-		crossorigin="anonymous">
+		integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 </head>
 
 <body>
@@ -16,12 +15,11 @@
 		<a class="navbar-brand" href="#">Employee Management System</a>
 
 		<!-- Toggler/collapsibe Button -->
-		<button class="navbar-toggler" type="button" data-toggle="collapse"
-			data-target="#collapsibleNavbar">
+		<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
 			<span class="navbar-toggler-icon"></span>
 		</button>
 	</nav>
-	
+
 	<div class="container">
 		<div class="row">
 			<h1>List Employees</h1>
@@ -30,10 +28,11 @@
 		<div class="row">
 			<div class="col-lg-3">
 				<a th:href="@{/employees/new}" class="btn btn-primary btn-sm mb-3">
-					Add Employee</a>
+					Add Employee
+				</a>
 			</div>
 		</div>
-		
+
 		<table class="table table-striped table-bordered">
 			<thead class="table-dark">
 				<tr>
@@ -49,15 +48,17 @@
 					<td th:text="${employee.firstName}"></td>
 					<td th:text="${employee.lastName}"></td>
 					<td th:text="${employee.email}"></td>
-					<td><a th:href="@{/employees/edit/{id}(id=${employee.id})}"
-						class="btn btn-primary">Update</a> <a
-						th:href="@{/employees/delete/{id}(id=${employee.id})}"
-						class="btn btn-danger">Delete</a></td>
+					<td>
+						<a th:href="@{/employees/edit/{id}(id=${employee.id})}" class="btn btn-primary">
+							Update
+						</a> 
+						<a th:href="@{/employees/delete/{id}(id=${employee.id})}" class="btn btn-danger">
+							Delete
+						</a>
+					</td>
 				</tr>
 			</tbody>
 		</table>
-		
 	</div>
 </body>
-
 </html>
