forms re-formatted in html files

--- a/employeemgmt/src/main/resources/templates/edit_employee.html
+++ b/employeemgmt/src/main/resources/templates/edit_employee.html
@@ -4,8 +4,7 @@
 <head>
 	<meta charset="ISO-8859-1">
 	<title>Employee Management System</title>
-	<link rel="stylesheet"
-		href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
 		integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 </head>
 
@@ -22,8 +21,11 @@
 		<!-- Navbar links -->
 		<div class="collapse navbar-collapse" id="collapsibleNavbar">
 			<ul class="navbar-nav">
-				<li class="nav-item"><a class="nav-link"
-					th:href="@{/employees}">Employee Management</a></li>
+				<li class="nav-item">
+					<a class="nav-link" th:href="@{/employees}">
+						Employee Management
+					</a>
+				</li>
 			</ul>
 		</div>
 	</nav>
@@ -34,24 +36,20 @@
 			<div class="col-lg-6 col-md-6 col-sm-6 container justify-content-center card">
 				<h1 class="text-center">Update Employee</h1>
 				<div class="card-body">
-					<form th:action="@{/employees/{id} (id=${employee.id})}"
-						th:object="${employee}" method="POST">
+					<form th:action="@{/employees/{id} (id=${employee.id})}" th:object="${employee}" method="POST">
 						<div class="form-group">
-							<label> Employee First Name </label> <input type="text"
-								name="firstName" th:field="*{firstName}" class="form-control"
-								placeholder="Enter First Name" />
+							<label> Employee First Name </label> 
+							<input type="text" name="firstName" th:field="*{firstName}" class="form-control" placeholder="Enter First Name" />
 						</div>
 
 						<div class="form-group">
-							<label> Employee Last Name </label> <input type="text"
-								name="lastName" th:field="*{lastName}" class="form-control"
-								placeholder="Enter Last Name" />
+							<label> Employee Last Name </label> 
+							<input type="text" name="lastName" th:field="*{lastName}" class="form-control" placeholder="Enter Last Name" />
 						</div>
 						
 						<div class="form-group">
-							<label> Employee Email </label> <input type="text" name="email"
-								th:field="*{email}" class="form-control"
-								placeholder="Enter Email" />
+							<label> Employee Email </label> 
+							<input type="text" name="email" th:field="*{email}" class="form-control" placeholder="Enter Email" />
 						</div>
 
 						<div class="box-footer">
