--- a/employeemgmt/src/main/resources/templates/create_employee.html
+++ b/employeemgmt/src/main/resources/templates/create_employee.html
@@ -22,7 +22,9 @@
 		<div class="collapse navbar-collapse" id="collapsibleNavbar">
 			<ul class="navbar-nav">
 				<li class="nav-item">
-					<a class="nav-link" th:href="@{/employees}">Employee Management</a>
+					<a class="nav-link" th:href="@{/employees}">
+						Employee Management
+					</a>
 				</li>
 			</ul>
 		</div>
@@ -37,25 +39,21 @@
 					<form th:action="@{/employees}" th:object="${employee}" method="POST">
 						<div class="form-group">
 							<label> Employee First Name </label>
-							<input type="text" name="firstName" th:field="*{firstName}" class="form-control"
-								placeholder="Enter  First Name" required="required"/>
+							<input type="text" name="firstName" th:field="*{firstName}" class="form-control" placeholder="Enter  First Name" required="required"/>
 						</div>
 
 						<div class="form-group">
 							<label> Employee Last Name </label>
-							<input type="text" name="lastName" th:field="*{lastName}" class="form-control"
-								placeholder="Enter Last Name" required="required"/>
+							<input type="text" name="lastName" th:field="*{lastName}" class="form-control" placeholder="Enter Last Name" required="required"/>
 						</div>
+						
 						<div class="form-group">
 							<label> Employee Email </label>
-							<input type="text" name="email" th:field="*{email}" class="form-control"
-								placeholder="Enter Email" required="required"/>
+							<input type="text" name="email" th:field="*{email}" class="form-control" placeholder="Enter Email" required="required"/>
 						</div>
 
 						<div class="box-footer">
-							<button type="submit" class="btn btn-primary">
-								Submit
-							</button>
+							<button type="submit" class="btn btn-primary">Submit</button>
 						</div>
 					</form>
 				</div>
